fix: Correct accessibility issue & remove comments
This commit will fix an accessibility issue on smaller screens where
the feedback form site's cancel button would overlap with the github
link.
It will also remove two comments out of the scripts file.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,6 +262,7 @@
 
 /* Begin Feedback card section, which contains the feedback form */
 .feedback-card {
+    z-index: 1;
     background: var(--gradient-rl);
     box-shadow: var(--shadow);
     border-radius: 10px;
